discussion/kv_engine/154539/154539_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38476: Remove logger from ScanContext

It just maps to the globalBucketLogger so we should use the macro
instead.

Change-Id: Ie177a7a2b0ee35d88758423947314a463a814908

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-05-27 12:21:33.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 12:28:06.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30856/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30856/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11: error: no member named "logger" in "BySeqnoScanContext" [clang-diagnostic-error]
    sctx->logger = &logger;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2224:11: error: no member named "logger" in "ByIdScanContext" [clang-diagnostic-error]
    sctx->logger = &logger;
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9842/ : FAILURE

Compile error at [2021-05-27T12:23:33.946Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10774/ : FAILURE

Compile error at [2021-05-27T12:23:04.115Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: ?class BySeqnoScanContext? has no member named ?logger?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10918/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11178/ : FAILURE

Compile error at [2021-05-27T12:22:54.613Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11178/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18740/ : FAILURE

Compile error at [2021-05-27T12:23:43.312Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18740/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36121/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36121/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7788/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-05-27 12:36:27.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-27 12:50:37.000000000
Message: 
Patch Set 1:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30856/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30856/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11: error: no member named "logger" in "BySeqnoScanContext" [clang-diagnostic-error]
    sctx->logger = &logger;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2224:11: error: no member named "logger" in "ByIdScanContext" [clang-diagnostic-error]
    sctx->logger = &logger;
          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9842/ : FAILURE

Compile error at [2021-05-27T12:23:33.946Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10774/ : FAILURE

Compile error at [2021-05-27T12:23:04.115Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: ?class BySeqnoScanContext? has no member named ?logger?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10774/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10918/ : FAILURE

Compile error at [2021-05-27T12:27:35.611Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: ?class BySeqnoScanContext? has no member named ?logger?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11178/ : FAILURE

Compile error at [2021-05-27T12:22:54.613Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11178/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18740/ : FAILURE

Compile error at [2021-05-27T12:23:43.312Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:2170:11:
error: no member named "logger" in "BySeqnoScanContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18740/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36126/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(2170): error C2039: "logger": is not a member of "BySeqnoScanContext" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36126/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7788/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
